minor edits to each page to fix spacing issues

--- a/_work/css/main.css
+++ b/_work/css/main.css
@@ -82,8 +82,8 @@ article {
 	display:inline-block;
 	width:100%;
 	background: rgba(255,255,255, 1);
-	padding:10px;
-	margin-bottom:6px;
+	padding:9px;
+	margin-bottom:7px;
 }
 
 button {
